# apodo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SPECIFICATION.md  pyproject.toml  setup.py
apodo/: __init__.py  application.py  blueprint.py  exceptions.py  request.py  response.py  router.py  server.py  utils.py
apodo/core/: application.py  blueprint.py
apodo/net/: connection.py  headers.py  request.py  response.py  route.py  router.py
apodo/util/: exceptions.py  parser.py  stream.py  utils.py
apodo/util/workers/: handler.py  necromancer.py  reaper.py
benchmarking/: serve_gato.py  test.py
concept_testing/: test.py
gato/: __init__.py  application.py  connection.py  gato.py  request.py  response.py  server.py
gato/components/: components.pxd  components.pyx  context.py
gato/headers/: headers.py
gato/multipart/: containers.py  parser.pxd  parser.pyx
legacy/: application.py  optimizer.py  static.py
legacy/client/: connection.py  session.py
legacy/components/: components.pxd  components.pyx  context.py
legacy/headers/: headers.pxd  headers.py
legacy/multipart/: containers.py  parser.pxd  parser.pyx
legacy/protocol/: __init__.py  cprotocol.pyx
legacy/responses/: __init__.py  hints.py
legacy/router/: parser.py  router.py
legacy/schemas/: __init__.py
legacy/sessions/: base.py
legacy/templates/: parser.py
legacy/templates/compilers/: python.py
legacy/vibora/: __init__.py  blueprints.py  cookies.py  server.py  utils.py
legacy/vibora/client/: limits.py  pool.py  request.py  response.py  (+2 more)
temp/: .classtest.py.swp
tests/: test_apodo.py  test_gato.py
(+11 files in other folders)
