[tool.poetry]
name = "apodo"
version = "0.1.0.dev"
description = "A remarkably fast asynchronous web framework for Python."
authors = ["Elliott Maguire <me@elliott-m.com>"]
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
cython = "^0.29.12"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = "=19.3b0"
flake8 = "^3.7"
pre-commit = "^1.18"

[tool.black]
line-length = 88
include = '\.pyx?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
