[tool.black]
line-length = 88
include = '\.pyx?$'

[tool.poetry]
name = "apodo"
version = "0.1.0"
description = "A remarkably fast, easy-to-use, and production-ready Python web server."
authors = ["Elliott Maguire <me@elliott-m.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyo3-pack = "^0.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
